--- a/assets/app.scss
+++ b/assets/app.scss
@@ -27,3 +27,10 @@ a{
   border-radius: 20px;
   width: 5px!important;
 }
+/*Apex chart*/
+.apexcharts-legend.apx-legend-position-right{
+  display: none;
+}
+.currecyCard{
+  cursor: pointer;
+}
