fix bugs at Check component and add i18n on computed

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -113,5 +113,9 @@ img {
 /*Check*/
 
 .check-card {
-    border: 2px solid #23ad41 !important;
+  position: relative;
+}
+.historyChip{
+  position: absolute;
+  right: 5px;
 }
