--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,55 +1,62 @@
 /* BASE */
 
 a {
-    text-decoration: none;
-    display: block;
+  text-decoration: none;
+  display: block;
 }
 
 button,
 select,
 a {
-    cursor: pointer;
-    outline: none;
-    background-color: transparent;
-    border: none;
-    color: inherit;
+  cursor: pointer;
+  outline: none;
+  background-color: transparent;
+  border: none;
+  color: inherit;
 }
 
 .v-application p {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 ul,
 ol,
 li {
-    list-style: none;
+  list-style: none;
 }
 
 img {
-    display: block;
+  display: block;
 }
 
 input[type="number"] {
-    -moz-appearance: textfield;
+  -moz-appearance: textfield;
 }
 
 input[type="number"]::-webkit-inner-spin-button {
-    display: none;
+  display: none;
 }
 
 .flexNone {
-    flex: none;
+  flex: none;
 }
 
 .text-gray {
-    // color: #717e95;
+  color: #717e95;
+  font-size: 15px;
 }
 
 .success-btn {
-    background: linear-gradient(94.9deg, #2fed59 4.26%, #23ad41 95.87%);
-    // color: white !important;
+  background: linear-gradient(94.9deg, #2fed59 4.26%, #23ad41 95.87%);
+  // color: white !important;
+}
+
+.white-btn {
+  border: 2px solid #23ad41;
+  background: white;
+  color: #23ad41 !important;
 }
 
 .success-text {
-    // color: #23ad41 !important;
+  // color: #23ad41 !important;
 }
