--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -45,7 +45,9 @@ input[type="number"]::-webkit-inner-spin-button {
   color: #717e95;
   font-size: 15px;
 }
-
+.success-text{
+  color: #23ad41;
+}
 .success-btn {
   background: linear-gradient(94.9deg, #2fed59 4.26%, #23ad41 95.87%);
   // color: white !important;
