update preload models

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -59,6 +59,8 @@ input[type="number"]::-webkit-inner-spin-button {
   color: #23ad41 !important;
 }
 
-.success-text {
-  // color: #23ad41 !important;
+.uc_text {
+  position: relative;
+  top: 100px;
+  text-align: center;
 }
