--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -15,6 +15,10 @@ a {
   color: inherit;
 }
 
+html[theme="light"] .v-application--wrap {
+  background-color: #eee !important;
+}
+
 .v-application p {
   margin-bottom: 10px;
 }
