make small fixes

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -53,6 +53,24 @@ input[type="number"]::-webkit-inner-spin-button {
   color: #23ad41;
 }
 
+html[theme="light"] {
+  .back-failure {
+    background: linear-gradient(to right top, #e08b8b, #df7472, #db5c58, #d5423d, #cd2121);
+  }
+
+  .back-success {
+    background: linear-gradient(to right top, #edfff1, #b9e8c0, #87d08c, #56b756, #119d11);
+  }
+}
+
+.back-failure {
+  background: linear-gradient(to right top, #872121, #681c1e, #4a1719, #2d1112, #110404);
+}
+
+.back-success {
+  background: linear-gradient(to right top, #34a34c, #277b3d, #1d552d, #14321c, #041107);
+}
+
 .success-btn {
   background: linear-gradient(94.9deg, #2fed59 4.26%, #23ad41 95.87%);
   // color: white !important;
